--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
   <div class="wrapper">
     <h1>JavaScript Refresher</h1>    
   </div>
-
-  <footer>  
-    <a href=""><h3 id="current-time"></h3></a>
-  </footer>
-
+  <script src='/Task 1/variables.js'></script>
+  <script src='/Task 1/operators.js'></script>
   <script src='/Task 1/conditionalAndLoopStatements.js'></script>
 </body>
 </html>
